--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,17 +15,6 @@ dependencies = [
   "pytest-cov>=6.0.0",
   "pydantic>=2.10.6",
   "pytest-asyncio>=0.25.3",
-  "pypandoc>=1.15",
-  "pydantic-ai[cli,examples,mcp]>=0.0.40",
-  "logfire[httpx]>=3.10.0",
-  "python-dotenv>=1.1.0",
-  "pydantic-evals[logfire]>=0.0.51",
-  "pydantic-ai-slim[mcp]>=0.0.40",
-  "duckduckgo-mcp-server>=0.1.1",
-  "wordcloud>=1.9.4",
-  "tenacity>=9.1.2",
-  "brotli>=1.1.0",
-  "markdownify>=1.1.0",
   "pydantic-settings>=2.8.1",
   "pyright>=1.1.404",
   "choix>=0.4.1",
@@ -37,7 +26,7 @@ dependencies = [
 ]
 
 [project.scripts]
-mathematica_server = "mathematica_mcp.server:wolframscript_server"
+wolframscript_server = "mathematica_mcp.server:wolframscript_server"
 
 [tool.ruff]
 line-length = 150
