--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,17 +7,20 @@ authors = [{ name = "Lars Nilse", email = "l.nilse@dunelm.org.uk" }]
 requires-python = ">=3.12,<3.13"
 dependencies = [
   "loguru>=0.7.3",
+  "pydantic>=2.10.6",
+  "pydantic-settings>=2.8.1",
+  "fastmcp>=2.13.0.1",
+]
+[dependency-groups]
+dev = [
   "pytest>=8.3.4",
-  "ruff>=0.9.5",
-  "pylint>=3.3.4",
   "pytest-xdist>=3.6.1",
   "pytest-cov>=6.0.0",
-  "pydantic>=2.10.6",
   "pytest-asyncio>=0.25.3",
-  "pydantic-settings>=2.8.1",
-  "pyright>=1.1.404",
   "pytest-mock>=3.15.1",
-  "fastmcp>=2.13.0.1",
+  "ruff>=0.9.5",
+  "pylint>=3.3.4",
+  "pyright>=1.1.404",
 ]
 
 [project.scripts]
