--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,8 @@
     "fastmcp",
     "wolframscript",
     "mathematica",
+    "numpy",
+    "pyflakes",
   ],
   "cSpell.languageSettings": [
     {
