--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 description = "MCP server for WolframScript"
 readme = "README.md"
 authors = [{ name = "Lars Nilse", email = "l.nilse@dunelm.org.uk" }]
+keywords = ["mcp", "model-context-protocol", "mathematica", "wolframscript"]
 requires-python = ">=3.12,<3.13"
 dependencies = [
   "loguru>=0.7.3",
@@ -11,6 +12,7 @@ dependencies = [
   "pydantic-settings>=2.8.1",
   "fastmcp>=2.13.0.1",
 ]
+
 [dependency-groups]
 dev = [
   "pytest>=8.3.4",
@@ -22,6 +24,11 @@ dev = [
   "pylint>=3.3.4",
   "pyright>=1.1.404",
 ]
+
+[project.urls]
+Homepage = "https://github.com/lars20070/mathematica-mcp"
+Repository = "https://github.com/lars20070/mathematica-mcp"
+Issues = "https://github.com/lars20070/mathematica-mcp/issues"
 
 [project.scripts]
 wolframscript_server = "mathematica_mcp.server:wolframscript_server"
@@ -85,7 +92,6 @@ reportMissingTypeStubs = false
 reportPrivateUsage = false
 
 [tool.pytest.ini_options]
-addopts = ["-m", "not paid"] # Skip tests that require a paid API key
 asyncio_default_fixture_loop_scope = "function" # Use "session" for a single event loop for all tests or "function" for a new event loop for every test (more isolation).
 markers = [
   "wolframscript: tests requiring a local WolframScript installation",
