--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,12 +1,11 @@
 name: CI
 on:
-  push
-  # pull_request:
-  #   branches:
-  #     - main
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 permissions:
   contents: read
@@ -78,3 +77,17 @@ jobs:
           file: ./coverage.xml
           fail_ci_if_error: false
           token: ${{ secrets.CODECOV_TOKEN }}
+  publish:
+    runs-on: ubuntu-latest
+    needs: [ci]
+    # Only publish on push to master, not on PRs
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    environment: pypi
+    permissions:
+      id-token: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v4.2.0
+      - uses: astral-sh/setup-uv@v5.2.2
+      - run: uv build --no-sources
+      - run: uv publish
