--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -61,10 +61,9 @@ jobs:
         run: uvx pyright .
       - name: Run unit tests
         # -v                verbose
-        # -m "not paid"     skip tests requiring paid API keys
         # -p no:warnings    ignore warnings
         # -n auto           run tests in parallel
-        run: uv run pytest -v -m "not paid" -p no:warnings -n auto --cov=mathematica_mcp --cov-report=xml
+        run: uv run pytest -v -p no:warnings -n auto --cov=mathematica_mcp --cov-report=xml
       - name: Upload logs
         uses: actions/upload-artifact@v4
         if: always()
@@ -89,5 +88,5 @@ jobs:
     steps:
       - uses: actions/checkout@v4.2.0
       - uses: astral-sh/setup-uv@v5.2.2
-      - run: uv build --no-sources
+      - run: uv build
       - run: uv publish
