--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ Repository = "https://github.com/lars20070/mathematica-mcp"
 Issues = "https://github.com/lars20070/mathematica-mcp/issues"
 
 [project.scripts]
-wolframscript_server = "mathematica_mcp.server:wolframscript_server"
+mathematica-mcp = "mathematica_mcp.server:wolframscript_server"
 
 [tool.ruff]
 line-length = 150
